--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       }
       .video {
         /* Internal borders have 1px width, thus need to add 4x1px to 120 px */
-        height: 124 px;
-        line-height: 124 px;
+        height: 124px;
+        line-height: 124px;
       }
       .thermometer, .order, .social {
         /*line-ht to vertically center */
@@ -59,7 +59,7 @@
         <div class="span6 video">Video</div>
         <div class="span6">
           <div class="thermometer">Thermometer</div>
-          <div class="Order">Order</div>
+          <div class="order">Order</div>
           <div class="social">Social</div>
         </div>
       </div>
